30-EKS-Ingress-TargetType-IP/04-kube-ingress-TargetTypeIP/04-ALB-Ingress-TargetType-IP.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
    alb.ingress.kubernetes.io/target-tupe: ip
    external-dns.alpha.kubernetes.io/hostname: extdns-k8s-service-demo101.truemekok.online
spec:
  ingressClassName: my-ingress-class
  defaultBackend:
    service:
      name: app3-nginx-nodeport-service
      port:
        number: 80
  tls:
    - hosts:
      - *.truemekok.online
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-nodeport-service
                port: 
                  number: 80                
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-nodeport-service
                port: 
                  number: 80
